2003-08-03  Per Bothner  <per@bothner.com>

	* SortedNodes.java (finishFragment):  Move writePosition call to
	startFragment, so consuming won't miss any final values.

	* NodeType.java (ATTRIBUTE_OK):  New constant.
	(isInstance(AbstractSequence,int,int)):  Always false if EOF_VALUE.
	Check ATTRIBUTE_OK if ATTRIBUTE_VALUE.
	* SortNodes.java (numArgs):  Remove redundant method.
	(typeSortedNodes, makeSortedNodesMethod):  Make public.

	* TreeScanner.java:  New class, extends CpsProcedure.
	* AttributeAxis.java:  New class, extends TreeScanner.
	* ChildAxis.java:  New class, extends TreeScanner.
	* DescendantAxis.java:  New class, extends TreeScanner.
	* DescendantOrSelfAxis.java:  New class, extends TreeScanner.
	* ParentAxis.java:  New class, extends TreeScanner.
	* SelfAxis.java:  New class, extends TreeScanner.
	* AttributeType.java:  New class, extends NodeType.
	* Makefile.am (java_sources):  Update accordingly.

2003-08-02  Per Bothner  <per@bothner.com>

	* ElementType.java (getImplementationType):  New method.

	* Document.java (parse):  Create a NodeTree, not a TreeList.

2003-08-01  Per Bothner  <per@bothner.com>

	* UnionNodes.java:  New class, extends Procedure2.
	* Makefile.am (java_sources):  Update accordingly.

2003-07-26  Per Bothner  <per@bothner.com>

	* SortedNodes.java:  New class, extends Values.
	* SortNodes.java:  New class, extends Procedure1.
	* Makefile.am (java_sources):  Update accordingly.

	* ElementConstructor.java (compileUsingNodeTree):  Use new
	ConsumerTarget.compileUsingConsumer helper method.

2003-07-23  Per Bothner  <per@bothner.com>

	* NodeCompare.java:  New class, extends Procedure2.
	* Makefile.am (java_sources):  Update accordingly.

2003-07-10  Per Bothner  <per@bothner.com>

	* ElementConstructor.java (compileUsingNodeTree):  New static method.
	(typeNodeTree):  New static field.
	(compile):  Use compileUsingNodeTree.

2003-06-27  Per Bothner  <per@bothner.com>
